[package]
name = "aoc18"
version = "0.1.0"
authors = ["Piotr Gabrielski <ppitpo@gmail.com>"]

[dependencies]
utils = {path = "utils"}
day1 = {path = "days/day1"}
day2 = {path = "days/day2"}
day3 = {path = "days/day3"}
day4 = {path = "days/day4"}
day5 = {path = "days/day5"}
day6 = {path = "days/day6"}
day7 = {path = "days/day7"}